src/objects/Data_Integration_Flow__mdt.object
<CustomObject>
    <fields>
        <fullName>AcceptableFailureRate__c</fullName>
        <defaultValue>0.75</defaultValue>
        <label>Acceptable Failure Rate</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>BatchSize__c</fullName>
        <defaultValue>2500</defaultValue>
        <label>Batch Size</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DownloadMode__c</fullName>
        <label>Download Mode</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Disabled</fullName>
                    <default>true</default>
                    <label>Disabled</label>
                </value>
                <value>
                    <fullName>Incremental</fullName>
                </value>
                <value>
                    <fullName>Bulk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UploadMode__c</fullName>
        <defaultValue>&quot;Disabled&quot;</defaultValue>
        <label>Upload Mode</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Disabled</fullName>
                    <default>true</default>
                    <label>Disabled</label>
                </value>
                <value>
                    <fullName>Incremental</fullName>
                </value>
                <value>
                    <fullName>Bulk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Data Integration Flow</label>
    <pluralLabel>Data Integration Flows</pluralLabel>
</CustomObject>